--- a/style.css
+++ b/style.css
@@ -31,6 +31,17 @@ h1 {
   margin-bottom: 1rem;
 }
 
+.fill {
+  color: white;
+}
+
+.stroke {
+  color: transparent;
+  -webkit-text-stroke: 1.5px white;
+  font-weight: 700;
+}
+
+
 #countdown {
   font-size: 1.5rem;
   margin-bottom: 1rem;
